# MaoMaoChat

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  vite.config.js
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
pseudocode/: MaoMaoChat-前端伪代码.md  MaoMaoChat-后端伪代码.md  MaoMaoChat-项目伪代码.md  README.md  前端伪代码-精简版.md  后端伪代码-精简版.md  打开文件-完整代码链路.md  编辑文件-完整代码链路.md
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  menu.rs  watcher.rs
src/lib/: ai.ts
src/lib/components/: AIConfigSettings.svelte  AIGenerateModal.svelte  AILookupSettings.svelte  AboutDialog.svelte  CustomPromptModal.svelte  DropZone.svelte  Editor.svelte  EmptyState.svelte  FrontmatterBar.svelte  ImageLightbox.svelte  MarkdownRenderer.svelte  OpenDialog.svelte  PasteModal.svelte  ProgressBar.svelte  ReaderControls.svelte  ScrollToTop.svelte  SearchOverlay.svelte  SettingsDialog.svelte  StatusBar.svelte  TabBar.svelte  TableOfContents.svelte  Toolbar.svelte  UpdateBanner.svelte  UpdateToast.svelte
src/lib/renderer/: pipeline.ts
src/lib/stores/: aiLookup.ts  apiConfigs.ts  autoUpdate.ts  pinned.ts  readingProgress.ts  recents.ts  settings.ts  tabs.ts  theme.ts  toc.ts  (+1 more)
src/routes/: +layout.svelte  +page.svelte
tests/fixtures/: complete-test.md  sample.md  scroll-sync-wrap.md
(+6 files in other folders)
