[package]
name = "maomaochat"
version = "0.2.6"
description = "MaoMaoChat — A native Markdown reader and editor"
authors = ["poip"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maomaochat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-process = "2"
anthropic-ai-sdk = "0.2"
keyring = "3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }



